# MiroFlow

./: .env.template  .gitignore  CLAUDE.md  pyproject.toml  sandbox-analysis.md
config/: agent_livedrbench_gemini_direct.yaml  agent_livedrbench_gemini_lab.yaml  agent_livedrbench_qwen3_lab.yaml  agent_livedrbench_qwen3_reader.yaml  agent_llm_gemini.yaml  agent_llm_gemini_direct.yaml  agent_llm_qwen3_local.yaml
config/agent_prompts/: main_boxed_answer.py
config/benchmark/: livedrbench.yaml
config/tool/: tool-code.yaml  tool-lab-audio.yaml  tool-lab-psycholing.yaml  tool-lab-reader.yaml  tool-lab-serp.yaml  tool-lab-ulscar.yaml  tool-lab-video.yaml
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
dashboard/src/components/: FileDropZone.jsx  Layout.jsx  MessageTimeline.jsx  StatBar.jsx  TaskExplorer.jsx  TraceOverview.jsx
dashboard/src/hooks/: useDataLoader.js  useTraceLoader.js
dashboard/src/styles/: global.css  tokens.js
dashboard/src/utils/: data.js
dashboard/src/views/: BenchmarkData.jsx  Experiments.jsx  TraceLogs.jsx
sandbox/: Dockerfile  __init__.py  docker_sandbox.py
spec/: Meta.md  Todo.md
spec/Core/: Meta.md  Product.md  Regulation.md  Technical.md
spec/Decisions/: Meta.md
spec/Experiments/: Baselines.md  Meta.md
spec/Infra/: Benchmarks.md  Dashboard.md  LabServices.md  Meta.md  Models.md  Tools.md
spec/Progress/: LATEST.md  Meta.md
src/llm/providers/: gpt_openai_client.py  (+1 more)
src/utils/: io_utils.py
utils/: livedrbench_export.py
utils/prepare_benchmark/: gen_livedrbench.py
(+8 files in other folders)
